[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Settings.gd" type="Script" id=1]
[ext_resource path="res://res/Wood24.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/MainMenuFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Interface/Buttons/BackButton.tscn" type="PackedScene" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1070, 30 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 697.186, 770.574 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100

[node name="LabelTitle" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 720.0

[node name="ScrollContainer" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 720.0
margin_bottom = 950.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 720.0
margin_bottom = 850.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="HBoxContainerLang" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 64.0
alignment = 1

[node name="LabelLanguage" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerLang" instance=ExtResource( 3 )]
margin_left = 187.0
margin_right = 487.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 0 )

[node name="ButtonLanguage" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerLang"]
margin_left = 491.0
margin_right = 532.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )

[node name="HBoxContainerScale" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 720.0
margin_bottom = 158.0
alignment = 1

[node name="LabelScale" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerScale" instance=ExtResource( 3 )]
margin_left = 237.0
margin_right = 437.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 0 )

[node name="ButtonScale" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerScale"]
margin_left = 441.0
margin_right = 482.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 720.0
margin_bottom = 208.0
alignment = 1

[node name="LabelRotationSize" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 281.0
margin_right = 281.0
margin_bottom = 20.0

[node name="LableRotationSizeValue" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 285.0
margin_right = 285.0
margin_bottom = 20.0

[node name="HSliderRotationSize" type="HSlider" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" groups=[
"noScroll",
]]
margin_left = 289.0
margin_right = 439.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
max_value = 25.0
tick_count = 25
ticks_on_borders = false

[node name="BackButton" parent="." instance=ExtResource( 6 )]
margin_left = 13.2562
margin_top = 12.5804
margin_right = 43.2562
margin_bottom = 52.5804
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerLang/ButtonLanguage" to="." method="_on_ButtonLanguage_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainerScale/ButtonScale" to="." method="_on_ButtonScale_item_selected"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/HSliderRotationSize" to="." method="_on_HSliderRotationSize_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="go_back"]
